[Testing] Semantic MediaWiki Structure test
Just running the 'structure' test suite.

--- a/container/tests/semantics_enabled.yaml
+++ b/container/tests/semantics_enabled.yaml
@@ -10,6 +10,6 @@ commandTests:
       - "-d"
       - "extensions/SemanticMediaWiki"
       - "--" 
-      - "--filter"
-      - "testIsClassifiedAsImportPerformerProtected_CreatorAndCurrentUserDontMatch"
+      - "--testsuite"
+      - "semantic-mediawiki-structure"
     exitCode: 0
