--- a/container/BUILD.bazel
+++ b/container/BUILD.bazel
@@ -13,12 +13,12 @@ container_run_and_commit(
     # Install Semantic MediaWiki using Composer: https://www.semantic-mediawiki.org/wiki/Help:Installation/Using_Composer_with_MediaWiki_1.25%2B
     commands = [ 
 	"apt-get update",
-	"apt-get install libpcre3", 
-	"apt-get install unzip zip", 
+	"apt-get install libpcre3=2:8.39-13", 
+	"apt-get install unzip=6.0-26 zip=3.0-12", 
 	"curl -sS https://getcomposer.org/installer | php",
 	"php composer.phar install", # Install Composer deps
 	"echo {} > composer.local.json", # Require Semantic MediaWiki locally, so we don't conflict with base MediaWiki's deps
-	"COMPOSER=composer.local.json php composer.phar require --no-update mediawiki/semantic-media-wiki",
+	"COMPOSER=composer.local.json php composer.phar require --no-update mediawiki/semantic-media-wiki:3.2.3",
 	"php composer.phar update -n --no-dev", # Update w/ deps; suppress interactive prompts
     ],
 )
