--- a/container/BUILD.bazel
+++ b/container/BUILD.bazel
@@ -76,3 +76,15 @@ container_push(
     skip_unchanged_digest = True,
     format = "Docker",
 )
+
+# Also release a pre-configured Demo container so people can just play around
+
+container_push(
+    name = "demo-release",
+    image = ":test-container",
+    registry = "index.docker.io",
+    repository = "naimkabir/semantic-mediawiki",
+    tag = "demo",
+    skip_unchanged_digest = True,
+    format = "Docker",
+)
