--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,8 +8,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install bazelisk
-        run: curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.1.0/bazelisk-linux-amd64"
-        run: mkdir -p "${GITHUB_WORKSPACE}/bin/"
-        run: mv bazelisk-linux-amd64 "${GITHUB_WORKSPACE}/bin/bazel"
-        run: chmod +x "${GITHUB_WORKSPACE}/bin/bazel"
-         
+        run: |
+          curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.1.0/bazelisk-linux-amd64"
+          mkdir -p "${GITHUB_WORKSPACE}/bin/"
+          mv bazelisk-linux-amd64 "${GITHUB_WORKSPACE}/bin/bazel"
+          chmod +x "${GITHUB_WORKSPACE}/bin/bazel"
+
+      - name: Run tests
+        run: bazel test //...
