--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: merge 
+name: deploy 
 on: 
   push:
     branches:
@@ -10,6 +10,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Install bazelisk
         run: |
           curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.1.0/bazelisk-linux-amd64"
@@ -19,3 +25,9 @@ jobs:
 
       - name: Run tests
         run: bazel test //...
+
+      - name: Deploying current release
+        run: bazel run //container:release
+
+      - name: Deploying Demo container
+        run: bazel run //container:demo
