--- a/container/BUILD.bazel
+++ b/container/BUILD.bazel
@@ -16,6 +16,7 @@ container_run_and_commit(
 	"apt-get install libpcre3=2:8.39-13", 
 	"apt-get install unzip=6.0-26 zip=3.0-12", 
 	"curl -sS https://getcomposer.org/installer | php",
+	"php composer.phar self-update 2.1.14", # Pin composer version
 	"php composer.phar install", # Install Composer deps
 	"echo {} > composer.local.json", # Require Semantic MediaWiki locally, so we don't conflict with base MediaWiki's deps
 	"COMPOSER=composer.local.json php composer.phar require --no-update mediawiki/semantic-media-wiki:3.2.3",
