--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,6 +9,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        
+      - name: Bazel cache
+        id: bazel-cache
+        uses: actions/cache@v2
+        with:
+          path: | 
+            ~/.cache/bazel
+          env:
+            version: 4.2.1
+          key: ${{ runner.os }}-{{ env.version }}-bazel-cache
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
