Also push a container with the 'latest' default tag, since this is idiomatic

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,5 +39,8 @@ jobs:
       - name: Deploying current release
         run: bazel run //container:release
 
+      - name: Deploying current release with default tag
+        run: bazel run //container:release-latest
+
       - name: Deploying Demo container
         run: bazel run //container:demo
