Make SMW 4 tests run

--- a/container/tests/semantics_enabled.yaml
+++ b/container/tests/semantics_enabled.yaml
@@ -1,5 +1,9 @@
 schemaVersion: '2.0.0'
 
+globalEnvVars:
+  - key: "MW_INSTALL_PATH"
+    value: "/var/www/html"
+
 commandTests:
   - name: "semantic-mediawiki-structure"
     command: "php"
