--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,8 +1,7 @@
 name: push 
 on: 
-  push:
-    branches:
-     - "!main"
+  pull_request:
+      types: [opened, reopened]
 jobs:
   test:
     runs-on: ubuntu-latest
