--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,7 +1,7 @@
 name: pr 
 on: 
   pull_request:
-      types: [opened, reopened]
+      types: [opened, reopened, edited]
 jobs:
   test:
     runs-on: ubuntu-latest
