fix bazel version

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -27,4 +27,4 @@ jobs:
           chmod +x "${GITHUB_WORKSPACE}/bin/bazel"
 
       - name: Run tests
-        run: bazel test //...
+        run: USE_BAZEL_VERSION="8.0.0" bazel test //...
