--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
         
       - name: Bazel cache
         id: bazel-cache
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         env:
           version: 4.2.1
         with:
@@ -34,13 +34,13 @@ jobs:
           chmod +x "${GITHUB_WORKSPACE}/bin/bazel"
 
       - name: Run tests
-        run: bazel test //...
+        run: USE_BAZEL_VERSION="7.6.1" bazel test //...
 
       - name: Deploying current release
-        run: bazel run //container:release
+        run: USE_BAZEL_VERSION="7.6.1" bazel run //container:release
 
       - name: Deploying current release with default tag
-        run: bazel run //container:release-latest
+        run: USE_BAZEL_VERSION="7.6.1" bazel run //container:release-latest
 
       - name: Deploying Demo container
-        run: bazel run //container:demo
+        run: USE_BAZEL_VERSION="7.6.1" bazel run //container:demo
